# docs/swagger.json
@@ -26,18 +26,25 @@
         },
         "/users": {
             "get": {
-                "description": "root for network test",
+                "description": "Get user details",
                 "consumes": [
                     "application/json"
                 ],
-                "tags": [
-                    "users"
+                "produces": [
+                    "application/json"
                 ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get User",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.HelloWorld"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.User"
+                            }
                         }
                     }
                 }
@@ -45,12 +52,50 @@
         }
     },
     "definitions": {
+        "gorm.DeletedAt": {
+            "type": "object",
+            "properties": {
+                "time": {
+                    "type": "string"
+                },
+                "valid": {
+                    "description": "Valid is true if Time is not NULL",
+                    "type": "boolean"
+                }
+            }
+        },
         "model.HelloWorld": {
             "type": "object",
             "properties": {
                 "hello": {
                     "type": "string",
                     "example": "world"
+                }
+            }
+        },
+        "model.User": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "$ref": "#/definitions/gorm.DeletedAt"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         }
